# bip

./: .clang-format  .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  bip.1  bip.conf.5  bipgenconfig.1  bipmkpw.1  configure.ac
samples/: bip.conf  bip.vim
scripts/: bip-release  bipgenconfig
src/: Makefile.am  bip.c  bip_main.c  bipmkpw.c  conf.y  config.h.in  connection.c  connection.h  defaults.h  irc.c  irc.h  lex.l  line.c  line.h  log.c  log.h  md5.c  md5.h  path_util.c  path_util.h  util.c  util.h  version.h
src/utils/: base64.c  base64.h
systemd/: README  bip-config.service  bip.service  bip_env.sh
tests/: Makefile.am  check_line.c
